Updated to keycloak-26