@@ -20,10 +20,8 @@ class EmbeddedKeycloak(keycloakData: KeycloakData, settings: Settings = Settings
   def startServer()(implicit ec: ExecutionContext): Future[StopHandle] = {
     preRun()
     val env = Map(
-      "KEYCLOAK_ADMIN" -> "admin",
-      "KEYCLOAK_ADMIN_PASSWORD" -> "admin",
-      // XXX Temp required when using jdk 21 until keycloak uses newer version of bytebuddy
-//      "JAVA_OPTS" -> "-Dnet.bytebuddy.experimental=true"
+      "KC_BOOTSTRAP_ADMIN_USERNAME" -> "admin",
+      "KC_BOOTSTRAP_ADMIN_PASSWORD" -> "admin",
     )
     val process = spawn(
       stdOutLogger,
